<resources>
    <string name="app_name">AplikasiBeritaa</string>
    <string name="title">Berita Terkini</string>
    <string name="title2">Pemicu Dolar Tembus Rp15.100 dan Risiko Saat Rupiah Terus Melemah</string>
    <string name="title3">Hoaks Ratna Sarumpaet: Merusak Kampanye Damai dan Memojokkan Prabowo</string>
    <string name="title4">Hoaks Ratna Sarumpaet: Merusak Kampanye Damai dan Memojokkan Prabowo</string>
    <string name="title5">Akar Masalah Penjarahan di Sulteng Karena Bantuan Tak Merata</string>
    <string name="title6">Peringatan HUT ABRI Paling Kelam pada 5 Oktober 1965</string>
    <string name="next">Selanjutnya</string>
</resources>
